--- a/CalculadoraJava/pom.xml
+++ b/CalculadoraJava/pom.xml
@@ -5,6 +5,14 @@
     <artifactId>CalculadoraJava</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.kyriosdata.parser</groupId>
+            <artifactId>parser</artifactId>
+            <version>1.0.2</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
